cmake_minimum_required(VERSION 3.10)
project(mytest)

# Set output directory
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SRC_MYTEST
    testclass.cc
)
include_directories(
  ${PROJECT_SOURCE_DIR}
)

add_library(mytest STATIC ${SRC_MYTEST})